Added spacing to partnerships section

--- a/index.html
+++ b/index.html
@@ -370,6 +370,8 @@ $(document).ready(function() {
                     We develop partnerships instead of simply working by the hour/project.  This enables us to be an extension of your current team, giving you additional resources when you need them.  We sell our services in buckets of time per week.  The average minimum is five hours but this can change based on our current project load.  We would be more than happy to speak with you about your needs to determine if we would be a good fit for you, and if you would be a good fit for us.  See our Contact section below for the best ways to reach us.
                 </p>
             </div>
+            
+            <div class="divider"></div>
 
         </div>
 
