--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ $(document).ready(function() {
     <div class="container">
         <div class="sixteen columns">
             <a href="#" class="logo">
+                <div class="cursive">DblTap</div>
+                <div>Labs</div>
             </a>
             <!--menu begin here -->
             <ul class="main-navigation">
