--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $(document).ready(function() {
         <div class="sixteen columns">
             <a href="#" class="logo">
                 <div class="cursive">DblTap</div>
-                <div>Labs</div>
+                <div>LABS</div>
             </a>
             <!--menu begin here -->
             <ul class="main-navigation">
