--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ $(document).ready(function() {
     <div class="container">
         <div class="sixteen columns">
             <a href="#" class="logo">
-                <div class="cursive">DblTap</div>
+                <div class="cursive">DblT<span class="fix-me">ap</span></div>
                 <div>LABS</div>
             </a>
             <!--menu begin here -->
@@ -114,7 +114,7 @@ $(document).ready(function() {
                     </span>
                 </h2>
                 <h1>
-                    <div class="cursive">DblTap</span>
+                    <div class="cursive">DblT<span class="fix-me">ap</span></span>
                     <div class="plain">LABS</span>
                 </h1>
             </div>
