Converted logo to image

--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@ $(document).ready(function() {
 <header>
     <div class="container">
         <div class="sixteen columns">
-            <a href="#" class="logo">
-                <div class="cursive">DblT<span class="fix-me">ap</span></div>
-                <div>LABS</div>
-            </a>
+            <a href="#" class="logo"></a>
             <!--menu begin here -->
             <ul class="main-navigation">
                 <li>
