Added phone number and restyled contact page.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 	<meta charset="utf-8">
 	<title>DblTap Labs</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="We are a boutique web development consultancy based in Alabama, USA.  We specialize in PHP, Ruby, and Node.js development.">
+	<meta name="author" content="DblTap Labs">
+    <meta name="keywords" content="PHP, Ruby, Node.js, Javascript, HTML5, Web Development, Software Development, Web Consultancy" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<!-- Mobile Specific Metas
@@ -397,21 +398,37 @@ $(document).ready(function() {
             <div class="divider">
             </div>
             <!-- google map begin here -->
-            <div class="eight columns block-info">
+            <div class="seven columns block-info">
                 <div id="google_map">
                 </div>
             </div>
-            <div class="eight columns style-form text-color contact-icons">
+            <div class="nine columns style-form text-color contact-icons">
 
-           <div class="divider"></div>
 
                 <h1>
                     Get in Touch With Us Now !
                 </h1>
                             
                 <ul class="socicon-big">
-                    <li><a href="mailto:partnerships@dbltaplabs.com" class="email">&nbsp;</a></li>
-                    <li><a href="http://twitter.com/dbltaplabs" target="_blank" class="twitter">&nbsp;</a></li>
+                    <li>
+                        <span class="phone">&nbsp;</span>
+                        <span class="link">855.771.0568</span>
+                        <br clear="both" />
+                    </li>
+                    <li>
+                        <a href="mailto:partnerships@dbltaplabs.com" class="email">&nbsp;</a>
+                        <span class="link">
+                            <a href="mailto:partnerships@dbltaplabs.com">partnerships@dbltaplabs.com</a>
+                        </span>
+                        <br clear="both" />
+                    </li>
+                    <li>
+                        <a href="http://twitter.com/dbltaplabs" target="_blank" class="twitter">&nbsp;</a>
+                        <span class="link">
+                            <a href="http://twitter.com/dbltaplabs" target="_blank" class="">@DblTapLabs</a>
+                        </span>
+                        <br clear="both" />
+                    </li>
                 </ul>
 
             </div>
