Setup responsive styling for iphone

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ $(document).ready(function() {
 
 <header>
     <div class="container">
-        <div class="sixteen columns">
+        <div id="main-navigation_container" class="sixteen columns">
             <a href="#" class="logo"></a>
             <!--menu begin here -->
             <ul class="main-navigation">
@@ -117,7 +117,7 @@ $(document).ready(function() {
                 </h1>
             </div>
             <div class="one-third column" id="intro-zombie">
-                <img src="images/intro-zombie.png" id="intro-zombie-img" />
+                <div id="intro-zombie-img"></div>
             </div>
                 
             <div class="sixteen columns tagline">
@@ -398,7 +398,7 @@ $(document).ready(function() {
             <div class="divider">
             </div>
             <!-- google map begin here -->
-            <div class="seven columns block-info">
+            <div id="google_map_container" class="seven columns block-info">
                 <div id="google_map">
                 </div>
             </div>
