--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ $(document).ready(function() {
                     Ruby, PHP, Javascript
                 </h3>
                 <p>
-                    Our team lives and breathes code.  We are open source fanatics.  We are polygots.  Need a new project in Ruby, done.  Need a legacy code-base supported in PHP, done.  Need a cutting-edge realtime app in Node.js, we have you covered.
+                    Our team lives and breathes code.  We are open source fanatics.  We are polyglots.  Need a new project in Ruby, done.  Need a legacy code-base supported in PHP, done.  Need a cutting-edge realtime app in Node.js, we have you covered.
                 </p>
             </div>
 
@@ -267,7 +267,7 @@ $(document).ready(function() {
                     Our Specialties
                 </h1>
                 <p>
-                     We are truly polygots with a wide array of interests and specialties.  We believe in being active and giving back to the open source community.  We love and have devoted most of our time to:
+                     We are truly polyglots with a wide array of interests and specialties.  We believe in being active and giving back to the open source community.  We love and have devoted most of our time to:
                 </p>
                 <ul id="arc-legend">
                     <li><span style="color:#FE642E;" id="codeigniter">CodeIgniter</span> and <span style="color:#81F781;" id="laravel">Laravel</span> - both are PHP frameworks</li>
