Styling and Google Analytics setup

--- a/index.html
+++ b/index.html
@@ -449,10 +449,10 @@ $(document).ready(function() {
         </div>
     </section>
 </article>
-<!-- Change UA-XXXXX-X to be your site's ID -->
+
 <script type="text/javascript">
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-XXXXX-X']);
+  _gaq.push(['_setAccount', 'UA-33246393-1']);
   _gaq.push(['_trackPageview']);
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
