--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ $(document).ready(function() {
                     </span>
                 </h2>
                 <h1>
-                    <div class="cursive">DblT<span class="fix-me">ap</span></span>
-                    <div class="plain">LABS</span>
+                    <div class="cursive">DblT<span class="fix-me">ap</span></div>
+                    <div class="plain">LABS</div>
                 </h1>
             </div>
             <div class="one-third column" id="intro-zombie">
